# FastAPICourse

./: .gitignore  README.md  pyproject.toml
fastapicourse/project_1/: books.py
fastapicourse/project_2/: books.py
fastapicourse/project_3/: alembic.ini  database.py  jwt_tokens.py  main.py  models.py  types.py
fastapicourse/project_3/alembic/: env.py
fastapicourse/project_3/alembic/versions/: 9f37bbb484c9_create_phone_number_for_user.py
fastapicourse/project_3/routers/: admin.py  auth.py  todos.py  todosv2.py  users.py
fastapicourse/project_3/static/project_3/css/: base.css
fastapicourse/project_3/templates/: base.html  navbar.html  test.html  todos.html
fastapicourse/tailwind/: database.py  jwt_tokens.py  main.py  models.py  package.json
fastapicourse/tailwind/routes/: admin.py  auth.py  books.py  home.py  todos.py  users.py
fastapicourse/tailwind/static/css/: tailwind.css
fastapicourse/tailwind/templates/: base.html  books.html  home.html  todos.html  users.html
tests/tailwind/: test_admin.py  test_main.py  test_todos.py  utils.py
