[tool.poetry]
name = "fastapicourse"
version = "0.1.0"
description = ""
authors = ["Andreas Atle <atle.andreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.3.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jinja2 = "^3.1.3"
alembic = "^1.13.1"
aiofiles = "^23.2.1"
bcrypt = "^4.1.2"
email-validator = "^2.1.0.post1"
black = "^24.1.1"
pytest = "^8.0.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
